--- a/client/src/components/portfolio/portfolio.scss
+++ b/client/src/components/portfolio/portfolio.scss
@@ -1,4 +1,4 @@
-@import '../../global.scss';
+@import "../../global.scss";
 
 .portfolio {
   background-color: white;
@@ -8,6 +8,10 @@
 
   h1 {
     font-size: 50px;
+
+    @include mobile{
+      font-size: 20px;
+    }
   }
 
   ul {
@@ -16,6 +20,11 @@
     list-style: none;
     display: flex;
 
+    @include mobile{
+      margin: 10px 0;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
   .container {
@@ -24,6 +33,10 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+
+    @include mobile{
+      width: 100%;
+    }
 
     .item {
       width: 220px;
@@ -35,10 +48,14 @@
       align-items: center;
       justify-content: center;
       color: white;
-      font-size: 20px;
       position: relative;
-      transition: all 0.5s ease;
+      transition: all .5s ease;
       cursor: pointer;
+
+      @include mobile{
+        width: 130px;
+        height: 100px;
+      }
 
       h3 {
         position: absolute;
@@ -50,8 +67,6 @@
         height: 100%;
         object-fit: cover;
         z-index: 1;
-
-
       }
 
       &:hover {
@@ -61,8 +76,6 @@
           z-index: 0;
         }
       }
-
     }
-
   }
 }
