--- a/client/src/components/works/works.scss
+++ b/client/src/components/works/works.scss
@@ -1,4 +1,4 @@
-@import '../../global.scss';
+@import "../../global.scss";
 
 .works {
   background-color: crimson;
@@ -10,18 +10,20 @@
   .arrow {
     height: 50px;
     position: absolute;
+    cursor: pointer;
+
+    @include mobile {
+      display: none;
+    }
 
     &.left {
       left: 100px;
       transform: rotateY(180deg);
-      cursor: pointer;
     }
 
     &.right {
       right: 100px;
-      cursor: pointer;
     }
-
   }
 
   .slider {
@@ -29,13 +31,20 @@
     display: flex;
     position: absolute;
     left: 0;
-    transition: all 0.5s ease-out;
+    transition: all 1s ease-out;
+
+    @include mobile {
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+    }
 
     .container {
       width: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
+      
 
       .item {
         width: 700px;
@@ -45,6 +54,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        @include mobile {
+          width: 80%;
+          height: 150px;
+          margin: 15px 0;
+        }
 
         .left {
           flex: 4;
@@ -69,25 +84,40 @@
               align-items: center;
               justify-content: center;
 
+              @include mobile {
+                width: 20px;
+                height: 20px;
+              }
+
               img {
                 width: 25px;
+
+                @include mobile {
+                  width: 15px;
+                }
               }
             }
             h2 {
               font-size: 20px;
+
+              @include mobile{
+                font-size: 13px;
+              }
             }
-            p{
-              font-size: 13px;              
+            p {
+              font-size: 13px;
+              @include mobile{
+                display: none;
+              }
             }
             span {
               font-size: 12px;
-              font-weight:600;
+              font-weight: 600;
               text-decoration: underline;
               cursor: pointer;
             }
           }
         }
-
         .right {
           flex: 8;
           height: 100%;
@@ -95,13 +125,13 @@
           align-items: center;
           justify-content: center;
           overflow: hidden;
-          
+
           img {
+            width: 400px;
+            transform: rotate(-10deg);
           }
         }
       }
     }
   }
-
-
 }
