--- a/client/src/components/works/works.scss
+++ b/client/src/components/works/works.scss
@@ -75,22 +75,21 @@
             flex-direction: column;
             justify-content: space-between;
 
-            .imgContainer {
-              width: 40px;
+            .iconContainer {             
+              width: 80px;
               height: 40px;
-              border-radius: 50%;
-              background-color: rgb(245, 179, 155);
               display: flex;
               align-items: center;
-              justify-content: center;
+              justify-content: space-between;
 
               @include mobile {
                 width: 20px;
                 height: 20px;
               }
 
-              img {
-                width: 25px;
+              .icon {
+                margin-left: 10px;
+                color: black;
 
                 @include mobile {
                   width: 15px;
