--- a/client/src/components/contact/contact.scss
+++ b/client/src/components/contact/contact.scss
@@ -6,6 +6,7 @@
 
   @include mobile {
     flex-direction: column;
+    align-items: center;
   }
 
   .left {
@@ -13,7 +14,7 @@
     overflow: hidden;
 
     img {
-      height: 100%;
+      height: 100%;    
     }
   }
   .right {
@@ -34,25 +35,30 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
+      
+      @include mobile {
+        width: 80vw;
+      }
 
       input {
-        width: 300px;
+        width: 80%;
         height: 30px;
         font-size: 14px;
 
         @include mobile {
-          width: 200px;
+          width: 90%;
           height: 20px;
+          margin: 5px 0;
         }
       }
 
       textarea {
-        width: 300px;
+        width: 80%;
         height: 200px;
         font-size: 14px;
 
         @include mobile {
-          width: 200px;
+          width: 90%;
           height: 100px;
         }
       }
