Additional about me card styling.

--- a/client/src/components/about/about.scss
+++ b/client/src/components/about/about.scss
@@ -6,13 +6,18 @@
   .aboutWrapper {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
     text-align: center;
     margin: 20px 20px;
 
     h6 {
       color: $mainColor;
+    }
+
+    .icon {
+      color: $mainColor;
+      font-size: 28px;
     }
   }
 }
