--- a/client/src/components/footer/footer.scss
+++ b/client/src/components/footer/footer.scss
@@ -3,8 +3,8 @@
 footer {
   width: 100%;
   height: 40px;
-  background: white;
-  color: $mainColor;
+  background: $mainColor;
+  color: white;
   position: fixed;
   bottom: 0;
   display: flex;
