--- a/client/src/components/topbar/topbar.scss
+++ b/client/src/components/topbar/topbar.scss
@@ -43,8 +43,9 @@
         }
 
         .icon {
-          font-size: 18px;
+          font-size: 20px;
           margin-right: 5px;
+          vertical-align: middle;
         }
 
         span {
